# LogService

./: CMakeLists.txt  README.md
include/: LogEntry.h  LogListener.h  LogReaderService.h  LogService.h
resources/: manifest.json.in
src/: Activator.cpp  Activator.h  LogEntry.cpp  LogEntryPrivate.cpp  LogEntryPrivate.h  LogEntryStore.cpp  LogEntryStore.h  LogReaderService.cpp  LogReaderServiceImpl.cpp  LogReaderServiceImpl.h  LogService.cpp  LogServiceImpl.cpp  LogServiceImpl.h
test/: CMakeLists.txt
